space_human_info

--- a/client/public/shuttle.html
+++ b/client/public/shuttle.html
@@ -4,11 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="/styles.css">
+  <title>More Space</title>
 </head>
-<body>
+<body id="shuttle-body">
 
-  <h3>test-shuttle</h3>
+  <h1>Humans In Space</h1>
 
+<p>12 April 1961 <br>
+Yuri Gagarin became the first human in space and the Earth's orbit on Vostok 1 on April 12, 1961.</p>
+<p>17 July 1962 or 19 July 1963
+Either Robert M. White or Joseph A. Walker (depending on the definition of the space border) became the first human to pilot a spaceplane, the North American X-15, on July 17, 1962 (White) or July 19, 1963 (Walker).</p>
+<p>18 March 1965 <br>
+Alexei Leonov became the first human to walk in space on March 18, 1965.</p>
+<p>December 1968 <br>
+Frank Borman, Jim Lovell, and William Anders became the first humans to travel beyond low Earth orbit (LEO) Dec 21–27, 1968, when the Apollo 8 mission took them to 10 orbits around the Moon and back.</p>
+<p>20 July 1969 <br>
+Neil Armstrong and Buzz Aldrin became the first humans to land on the Moon on July 20, 1969.</p>
+<p>longest trip <br>
+The longest single human spaceflight is that of Valeri Polyakov, who left Earth on 8 January 1994, and did not return until 22 March 1995 (a total of 437 days 17 h 58 min 16 s). Sergei Krikalyov has spent the most time of anyone in space, 803 days, 9 hours, and 39 minutes altogether. The longest period of continuous human presence in space is 18 years and 242 days on the International Space Station, exceeding the previous record of almost 10 years (or 3,634 days) held by Mir, spanning the launch of Soyuz TM-8 on 5 September 1989 to the landing of Soyuz TM-29 on 28 August 1999.</p>
+<br><br>
+<p>By nationality or sex</p>
+<p>12 April 1961 <br>
+
+Yuri Gagarin became the first Russian as well as the first human to reach space on Vostok 1 on April 12, 1961.</p>
+
+<p>5 May 1961 <br>
+Alan Shepard became the first American to reach space on Freedom 7 on May 5, 1961.</p>
+<p>20 February 1962 <br>
+John Glenn became the first American to orbit the Earth on February 20, 1962.</p>
+<p>16 June 1963 <br>
+Valentina Tereshkova became the first woman to orbit the Earth on June 16, 1963.</p>
+<p>25 July 1984 <br>
+Svetlana Savitskaya became the first woman to walk in space on July 25, 1984.</p>
+<p>15 October 2003 <br>
+Yang Liwei became the first Chinese in space and the Earth's orbit on Shenzhou 5 on October 15, 2003.
+Sally Ride became the first American woman in space in 1983. Eileen Collins was the first female Shuttle pilot, and with Shuttle mission STS-93 in 1999 she became the first woman to command a U.S. spacecraft.</p>
+<br>
+<p>For many years, only the USSR (later Russia) and the United States had their own astronauts. Citizens of other nations flew in space, beginning with the flight of Vladimir Remek, a Czech, on a Soviet spacecraft on 2 March 1978, in the Interkosmos programme. As of 2010, citizens from 38 nations (including space tourists) have flown in space aboard Soviet, American, Russian, and Chinese spacecraft.</p>
 </body>
 </html>
