--- a/client/public/black-hole.html
+++ b/client/public/black-hole.html
@@ -24,10 +24,13 @@
       collapses in upon itself. This collapse also causes a supernova,
       or an exploding star, that blasts part of the star into space.</p>
 
+<!-- <br>
 <br>
 <br>
 <br>
-
+<br>
+<br> -->
+<br style=“line-height:8;”></br>
 
     <span class="black_hole_left">
         If you happened to fly near a black hole, its extreme gravitational
@@ -54,9 +57,9 @@
 
 <br style=“line-height:3;”>
 
-<div class="black_hole_centre">The Milky Way galaxy alone is thought to
+<div class="black_hole_bottom">The Milky Way galaxy alone is thought to
   harbor some 100 million stellar-mass black holes. At the centre of the Milky
-  Way there is a supermassive black hole called Sagittarius A*. at its heart.With 100 billion galaxies
+  Way there is a supermassive black hole called Sagittarius A*. With 100 billion galaxies
   out there, each with 100 million stellar-mass black holes and a core
   supermassive monster (not to mention other types
   being discovered), it's like trying to count grains of sand.</div>
