--- a/client/public/shuttle.html
+++ b/client/public/shuttle.html
@@ -10,6 +10,7 @@
 <body id="shuttle-body">
 
   <h1>Humans In Space</h1>
+<div class="shuttle-text">
 
 <p>12 April 1961 <br>
 Yuri Gagarin became the first human in space and the Earth's orbit on Vostok 1 on April 12, 1961.</p>
@@ -42,5 +43,6 @@ Yang Liwei became the first Chinese in space and the Earth's orbit on Shenzhou 5
 Sally Ride became the first American woman in space in 1983. Eileen Collins was the first female Shuttle pilot, and with Shuttle mission STS-93 in 1999 she became the first woman to command a U.S. spacecraft.</p>
 <br>
 <p>For many years, only the USSR (later Russia) and the United States had their own astronauts. Citizens of other nations flew in space, beginning with the flight of Vladimir Remek, a Czech, on a Soviet spacecraft on 2 March 1978, in the Interkosmos programme. As of 2010, citizens from 38 nations (including space tourists) have flown in space aboard Soviet, American, Russian, and Chinese spacecraft.</p>
+</div>
 </body>
 </html>
