--- a/client/public/dwarfPlanets.html
+++ b/client/public/dwarfPlanets.html
@@ -37,6 +37,7 @@
         <img id="MakeMake" src="./dwarf-planet-makemake-01.jpg" alt="Planet Makemake">
         <img id="Eris" src="./Eris.png" alt="Planet Eris">
         <iframe id="Haumea" src="https://solarsystem.nasa.gov/gltf_embed/2384" width="22%" height="350px" frameborder="0"></iframe>
+
         <table id="dwarfCeres">
           <tr>
             <th>Ceres:</th>
@@ -60,12 +61,50 @@
           </tr>
           <tr>
             <td>Distance From the Sun:</td>
+            <td>4,253,000,000 miles</td>
           </tr>
           <tr>
             <td>Length Of The Day:</td>
+            <td>22.5 Earth hours</td>
           </tr>
           <tr>
             <td>Length Of The Year:</td>
+            <td>305 Earth years</td>
+          </tr>
+        </table>
+        <table id="dwarfEris">
+          <tr>
+            <th>Eris:</th>
+          </tr>
+          <tr>
+            <td>Distance From the Sun:</td>
+            <td>6,289,000,000 miles</td>
+          </tr>
+          <tr>
+            <td>Length Of The Day:</td>
+            <td>25.9 Earth hours</td>
+          </tr>
+          <tr>
+            <td>Length Of The Year:</td>
+            <td>557 Earth years</td>
+          </tr>
+        </table>
+
+        <table id="dwarfHaumea">
+          <tr>
+            <th>Haumea:</th>
+          </tr>
+          <tr>
+            <td>Distance From the Sun:</td>
+            <td>4,010,000,000 miles</td>
+          </tr>
+          <tr>
+            <td>Length Of The Day:</td>
+            <td>4 Earth hours</td>
+          </tr>
+          <tr>
+            <td>Length Of The Year:</td>
+            <td>285 Earth years</td>
           </tr>
         </table>
 
